fix bugg with the logo in dark mode desktop(didnt change the color) and add figma as link in sidebar a burger menu

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,11 +25,6 @@
   border-radius: 0.5rem;
   z-index: -1;
 }
-theme-toggle {
-  position: absolute;
-  bottom: 10rem;
-  right: 1.5rem;
-}
 
 .shortcuts__searcher {
   width: auto;
