--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -29,6 +29,12 @@ button {
   }
 }
 
+theme-toggle {
+  position: fixed;
+  bottom: 7rem;
+  right: 2rem;
+}
+
 .topbar__logo {
   display: none;
 }
